--- a/style.css
+++ b/style.css
@@ -20,5 +20,12 @@
 }
 
 .rotate {
+    width: 100px;
+    background-color:  #ccc;
+    padding: 78px 40px;
+    margin: 100px auto;
+}
+
+.rotate {
     animation: rotate_anime 1s infinite; /* rotate_animeを1秒かけて実行するのを繰り返す */
 }
