--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  background-image:url("A3B95B94-5D09-48E8-A4F1-7BF4DDEE16D7.gif");
+  background-image:url("https://asset.watch.impress.co.jp/img/wf/docs/1251/932/60fpsparrot.gif");
 }
 
  
