--- a/style.css
+++ b/style.css
@@ -25,11 +25,12 @@ width: 600px;
 
 span{
   display:inline-block;
-  width:100px;
+  width:1000px;
   margin:50px;
   height:100px;
   margin:30px;
-  background:gold;
+  font-size: large;
+  background:white;
 }
 
 #box1{
