--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   width:150px;
-  background-image: url("af2ea99145e0ac42260452ef5c61adfb.jpg");
+  background-image: url("a.jpg");
 }
 img {
 width: 600px;
