--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
   top: 0;
   width: 100%;
   height: 50px;
-  background-color: darkgrey;
+  font-size: 100px;
+  background-color: white;
 }
 
 body {
