--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 50px;
+  height: 85px;
   font-size: 100px;
-  background-color: white;
+  background-color: #4fff55;
 }
 
 body {
