--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
   top: 0;
   width: 100%;
   height: 85px;
-  font-size: 100px;
+  font-size: 40px;
   background-color: #4fff55;
+  font-weight: bold;
 }
 
 body {
@@ -19,7 +20,7 @@ img {
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: darkgrey;
+  background-color: #ffffff;
 }
 
 span{
@@ -29,7 +30,7 @@ span{
   height:100px;
   margin:30px;
   font-size: 100px;
-  background:white;
+  background: #ffffff;
 }
 
 #box1{
